# dogs-sop

./: Cargo.toml  README.md
insts/: R.200.100.1.sop  R.200.100.15.sop  R.200.100.30.sop  R.200.100.60.sop  R.200.1000.1.sop  R.200.1000.15.sop  R.200.1000.30.sop  R.200.1000.60.sop  R.300.100.1.sop  R.300.100.15.sop  R.300.100.30.sop  R.300.100.60.sop  R.300.1000.1.sop  R.300.1000.15.sop  R.300.1000.30.sop  R.300.1000.60.sop  R.400.100.1.sop  R.400.100.15.sop  R.400.100.30.sop  R.400.100.60.sop  R.400.1000.1.sop  R.400.1000.15.sop  R.400.1000.30.sop  R.400.1000.60.sop  R.500.100.1.sop  R.500.100.15.sop  R.500.100.30.sop  R.500.100.60.sop  R.600.100.1.sop  R.600.100.15.sop  R.600.100.30.sop  R.600.100.60.sop  R.700.100.1.sop  R.700.100.15.sop  R.700.100.30.sop  R.700.100.60.sop
src/: main.rs  sop.rs  soptree.rs
